[project]
name = "utils"
version = "0.2.0"
description = "General typed utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [
    {name = "Yuri Ximenes", email = "yx.dev@gmx.ie"},
]
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "requirements.txt"]

