[project]
name = "utils"
version = "0.4.0"
description = "General typed utilities to support typedsystem applications."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [
    {name = "Yuri Ximenes", email = "ximenesyuri@gmx.ie"},
]
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "requirements.txt"]

